--- a/conf/app.conf
+++ b/conf/app.conf
@@ -16,4 +16,10 @@ templateright = }}}
 static_map = "map.json"
 fis_receiver_key = "***"
 
+mysql_user = "root"
+mysql_password = "123"
+mysql_host = "localhost"
+mysql_port = "3306"
+mysql_db_name = "goblog"
+
 #include "../custom/app.conf"
